--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=neoback
+spring.datasource.url=jdbc:postgresql://localhost:5432/neoinfo
+spring.datasource.username=calmo
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.hibernate.SQL=debug
