variables de entorno

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>google-api-client</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
 
     </dependencies>
@@ -92,6 +97,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            
         </plugins>
     </build>
 
